--- a/css/side-bar.css
+++ b/css/side-bar.css
@@ -13,12 +13,12 @@
   border: none !important;
   background-color: transparent !important;
   padding: 0 !important;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
 }
 
 .side-bar-header .navbar-brand {
-  display: none !important;
-  /* Hide logo inside sidebar in desktop, logo is in main content area */
+  display: block !important;
+  /* Show logo inside sidebar in desktop, logo is in main content area */
 }
 
 .side-bar .side-menu {
@@ -26,14 +26,14 @@
 }
 
 .side-bar .side-menu .nav-item {
-  margin-bottom: 4px !important;
+  margin-bottom: 14px !important;
 }
 
 .side-bar .side-menu a {
   color: var(--theme-text-gray) !important;
   font-size: 14px !important;
   font-weight: 500 !important;
-  padding: 6px 16px !important;
+  padding: 10px 20px !important;
   border-radius: 30px !important;
   /* Capsule style */
   transition: all 0.2s ease;
@@ -120,9 +120,10 @@
   color: #fff;
 }
 
-.side-bar-user .nav-link-logout svg {
-  width: 20px;
-  height: 20px;
+.side-bar-user .nav-link-logout svg,
+.side-bar-user .nav-link-logout img {
+  width: 20px !important;
+  height: 20px !important;
 }
 
 
